<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ff7e7aff"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/walsaTitle"
        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/textView"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subTitle"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/editText"
            android:background="#ffd6d9ff"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/editText2"
            android:background="#ffdddbff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="46dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stuff"
            android:id="@+id/stuff"
            android:layout_gravity="left"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:id="@+id/student" />

    </RadioGroup>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />




</RelativeLayout>

